--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,12 @@
 title: Gent Rexha's Blog
 email: gent.rexha@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Documenting my journey in becoming a Data Scientist through personal projects, articles and opinions.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://gentrexha.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: gentrexha_
-github_username:  gentrexha
-google_analytics: UA-131094415-1
+twitter_username: "gentrexha_"
+github_username:  "gentrexha"
+google_analytics: "UA-131094415-1"
 
 # Build settings
 markdown: kramdown
