--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,10 @@ theme: minima
 plugins:
   - jekyll-feed
 kramdown:
+  # use Github Flavored Markdown
+  input: GFM
+  # do not replace newlines by <br>s
+  hard_wrap: false
   # parse markdown inside block-level HTML tag
   parse_block_html: true
 # Exclude from processing.
