Updateda about, removed contact and updated kramdown version & .gitignore

--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,9 @@
 title: gentrexha.io
 email: gent.rexha@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Documenting my journey in becoming a Data Scientist through personal projects, articles and opinions.
+  Documenting my journey in the field of Data Science through personal projects, articles and opinions.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://gentrexha.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: "RexhaGent"
 github_username:  "gentrexha"
 google_analytics: "UA-131094415-1"
 
